--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
     "version": 2,
     "name": "api-fake",
-    "builds": [{ "src": "index.js", "use": "@now/node-server" }],
+    "builds": [
+        {
+            "src": "index.js",
+            "use": "@now/node-server"
+        }
+    ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.js"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "/index.js"
+        }
     ]
-  }
+}
